Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2030

Thrift allows for inconsistent use of "oneway"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • None

    Description

      From my understanding, a oneway is intended to return no value at all, allowing for optimizations like async execution within the service, etc. But both IDL Syntax and the Thrift Compiler allow for oneway functions having a return type other than void, which in my opinion is inconsistent.

      At the very least a warning would be appropriate here.

      Attachments

        Activity

          People

            jensg Jens Geyer
            jensg Jens Geyer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: