THRIFT-2030 Thrift allows for inconsistent use of "oneway"

Patch: Jens Geyer